<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.nba.automation</groupId>
  <artifactId>NBA-Automation-Framework-FinalWithAPI-Java17-BDD-Full</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <module>automation-framework</module>
    <module>core-tests</module>
    <module>api-tests</module>
  </modules>
	<dependencies>
	<dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.11.0</version>
            <scope>test</scope>
        </dependency>
	</dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
		   <annotationProcessorPaths>
		      <path>
		        <groupId>org.projectlombok</groupId>
		        <artifactId>lombok</artifactId>
		        <version>1.18.24</version>
		      </path>
		    </annotationProcessorPaths>
		    <compilerArgs>
		      <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
		    </compilerArgs>
            <source>17</source>
            <target>17</target>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
